--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="#about">about</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" <a href="http://localhost:8158/index.html"></a>Restart</a>
+          <a class="nav-link" <a href="https://yujiforger.github.io/website.personal/"></a>Restart</a>
         </li>
       </ul>
     </div>
