--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>https://www.yujianakbaik.com</title>
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
@@ -38,7 +38,7 @@
    <div class="container">
      <div class="row">
        <div class="col-md-6">
-         <h1 class="display-2 fw-bold">Hai, Nama saya <span class="text-brand">Muhamad Yusup Taziri</span></h1>
+         <h1 class="display-2 fw-bold">Hai, Saya <span class="text-brand">Muhamad Yusup Taziri</span></h1>
          
          <a href="https://instagram.com/yujiporjer?utm_source=qr&igshid=MzNlNGNkZWQ4Mg=="
          class="btn btn-ig">Instagram</a>
